--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "start": "node ./src/server.js",
+    "watch": "nodemon ./src/server.js",
+    "seed": "node ./src/seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +17,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "mysql2": "^2.3.3-rc.0",
+    "sequelize": "^6.9.0"
   }
 }
